# clipboard-manager

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  clipboard-manager.c  clipboard-manager.h  clipboard.sh  clipboard.txt  configure  configure.ac  gconf2xsettings.c  gconf2xsettings.h  keys  manager.c
debian/: Makefile.am  Makefile.in  changelog  clipboard-manager.install  clipboard-manager.xsession  control  copyright  rules
